# Spot-Bid-Agent

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  spot_bid_agent.db  turvo_secrets.py  whats_api_test.py
FreightX-V1-main/: .cursorignore  .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
FreightX-V1-main/config/: config.py
FreightX-V1-main/data/: Dataset_download_script.py
FreightX-V1-main/scripts/: basics_crash.py  basics_csa.py  basics_df.py  basics_hos.py  basics_ud.py  basics_vm.py  main.py  merge.py
FreightX-V1-main/src/api/: main.py  model_run_tracker.py  run_carrier_pipeline.py  run_full_pipeline.py  run_lane_pipeline.py  web_agent.py
FreightX-V1-main/src/api/models/: __init__.py  combine_model.py  data_handling.py  model1.py  (+15 more)
backend/: pyproject.toml  spot_bid_agent.db
backend/app/: main.py
backend/app/core/: logging.py  settings.py
backend/app/db/: base.py  migrations.py  models.py
backend/app/health/: routes.py
backend/app/portal/: api.py  dummy_generator.py  router.py  schemas.py  service.py
backend/app/services/: sse_broker.py  whatsapp_service.py
backend/app/web/: routes.py  whatsapp_api.py  whatsapp_web.py
backend/app/webhooks/: reply_handler.py  resend_handler.py  routes.py
backend/spot_bid_agent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_carrier_aggregation.py  test_carrier_recommendations.py  test_dummy_generator.py  test_freightx_endpoint.py  test_freightx_normalizer.py  test_outreach.py  test_portal_endpoints.py  test_whatsapp_endpoints.py
(+85 files in other folders)
