[project]
name = "main"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.5.2",
    "geopandas>=1.1.3",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "playwright>=1.60.0",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scipy>=1.15.3",
    "shapely>=2.1.2",
    "streamlit>=1.57.0",
]
