[project]
name = "spot-bid-agent-backend"
version = "0.1.0"
description = "Backend APIs and workflow runtime for Spot Bid Agent"
requires-python = ">=3.11"
dependencies = [
  "flask>=3.1.0",
  "gunicorn>=23.0.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "structlog>=25.4.0",
  "python-json-logger>=3.3.0",
  "httpx>=0.28.0",
  "opentelemetry-sdk>=1.36.0",
  "opentelemetry-exporter-otlp>=1.36.0",
  "sqlalchemy>=2.0.0",
  "psycopg2-binary>=2.9.0",
  "pandas>=2.0.0",
  "resend>=2.0.0",
  "svix>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "ruff>=0.12.0",
  "mypy>=1.17.0"
]

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
